--- a/android/intltest/src/main/res/layout/activity_main.xml
+++ b/android/intltest/src/main/res/layout/activity_main.xml
@@ -1,15 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView"
+    <EditText
+        android:id="@+id/scriptEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textMultiLine"
+        android:imeOptions="actionDone" />
+
+    <Button
+        android:id="@+id/evalButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Hello Intl"/>
+        android:text="Evaluate" />
+
+
+    <!--    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--        xmlns:tools="http://schemas.android.com/tools"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="1000px">-->
+
+        <ListView
+            android:id="@+id/scriptsListView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+<!--    </ScrollView>-->
+
+
+
 </LinearLayout>
